[gd_scene load_steps=5 format=3 uid="uid://dpio6p7g4fwp3"]

[ext_resource type="Script" uid="uid://bpq4s08bnspwu" path="res://src/core/main.gd" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://cd3r3hec8xqi6" path="res://assets/icon.svg" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://bknco5ltjlr61" path="res://src/gameplay/PenTool.gd" id="2_sugp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sugp2"]
size = Vector2(124, 128)

[node name="main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="PenTool" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource("2_sugp2")

[node name="Ray1" type="RayCast2D" parent="PenTool"]
target_position = Vector2(-66, -66)
hit_from_inside = true

[node name="Ray2" type="RayCast2D" parent="PenTool"]
hit_from_inside = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_sugp2")

[node name="Icon" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("2_0wfyh")
